# dqrat-check

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  alloc.hh  constraint.hh  constraint_DB.cc  constraint_DB.hh  dependency_manager.hh  dependency_manager_upure.cc  dependency_manager_upure.hh  dqbf.cc  dqbf.hh  dqrat_check.cc  dqrat_check.hh  main.cc  parser.cc  parser.hh  propagator.hh  solver_types.hh  watched_literal_propagator.cc  watched_literal_propagator.hh
test/: test_01_ldq-unsound.dqdimacs  test_01_ldq-unsound.dqrat  test_02_propositionally_unsat.dqdimacs  test_03_UP_unsat.dqdimacs  test_04_propositional_drat.dqdimacs  test_05_ex2_BCJ14_Thm7.dqdimacs  test_05_ex2_BCJ14_Thm7.dqrat  test_06_fork.dqdimacs  test_06_fork.dqrat  test_07_del_unit.dqdimacs  test_07_del_unit.dqrat  test_08_del_nonunit.dqdimacs
